--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,23 @@ repositories {
 }
 
 dependencies {
+  implementation 'io.hypersistence:hypersistence-utils-hibernate-55:3.3.2'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
+  implementation 'com.fasterxml.jackson.module:jackson-module-jaxb-annotations:2.12.6'
+  //
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.flywaydb:flyway-core'
-  compileOnly 'org.projectlombok:lombok'
-  runtimeOnly 'org.postgresql:postgresql'
+  //
   annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+  //
+  runtimeOnly 'org.postgresql:postgresql'
+  //
+  compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
+  testCompileOnly 'org.projectlombok:lombok'
+  testAnnotationProcessor 'org.projectlombok:lombok'
+  //
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
