--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,8 +4,13 @@ spring:
     username: pg-json
     password: pg-json
   jpa:
+    show-sql: true
+    open-in-view: false
     properties:
       hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
-    hibernate.ddl-auto: create-drop
+    generate-ddl: true
+    hibernate:
+      ddl-auto: create
   flyway:
+    baseline-on-migrate: true
     fail-on-missing-locations: false
