--- a/spring-data-jpa-postgres-json/build.gradle
+++ b/spring-data-jpa-postgres-json/build.gradle
@@ -1,5 +1,6 @@
 plugins {
   id 'java'
+  id 'io.freefair.lombok' version '8.0.1'
   id 'com.palantir.docker-run' version '0.35.0'
   id 'org.springframework.boot' version '2.7.11'
   id 'io.spring.dependency-management' version '1.0.15.RELEASE'
@@ -7,7 +8,11 @@ plugins {
 
 group = 'io.github.daggerok'
 version = '0.0.2-SNAPSHOT'
-sourceCompatibility = '17'
+
+java {
+  targetCompatibility = JavaVersion.VERSION_1_8
+  sourceCompatibility = JavaVersion.VERSION_1_8
+}
 
 configurations {
   compileOnly {
@@ -46,9 +51,9 @@ tasks.named('test') {
     showExceptions = true
     showStandardStreams = true
     events(
-        org.gradle.api.tasks.testing.logging.TestLogEvent.PASSED,
-        org.gradle.api.tasks.testing.logging.TestLogEvent.SKIPPED,
-        org.gradle.api.tasks.testing.logging.TestLogEvent.FAILED
+            org.gradle.api.tasks.testing.logging.TestLogEvent.PASSED,
+            org.gradle.api.tasks.testing.logging.TestLogEvent.SKIPPED,
+            org.gradle.api.tasks.testing.logging.TestLogEvent.FAILED
     )
   }
   dependsOn("up")
